Update URL in index.html

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ color: #666;
 },
 "telephone": "07735873694",
 "email": "martinsteel940@gmail.com",
-"url": "https://YOUR-GITHUB-USERNAME.github.io/"
+"url": "https://https://steely1968.github.io//"
 }
 </script>
 
