Enhance index.html with updated content and styles
Updated the meta description, increased logo size, and improved text for clarity and professionalism.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home Maintenance Services | Askern DN6</title>
-<meta name="description" content="Reliable home maintenance services in Askern, Doncaster (DN6). Covering a 5-mile radius. Call 07735 873694 for fast, friendly repair and maintenance solutions.">
+
+<meta name="description" content="Reliable home maintenance and repair services based in Askern, Doncaster (DN6). Covering a 5-mile radius. Friendly, affordable and professional service.">
 
 <style>
 body {
@@ -15,7 +17,7 @@ background-color: #ffffff;
 color: #000000;
 }
 
-/* Header */
+/* Header Layout */
 header {
 display: flex;
 justify-content: space-between;
@@ -25,15 +27,17 @@ background-color: #f4f4f4;
 border-bottom: 2px solid #ddd;
 }
 
+/* Bigger Logo */
 header img {
-height: 60px;
+height: 100px; /* Increased size */
 }
 
 .call-button {
 background-color: #28a745;
 color: #ffffff;
-padding: 12px 20px;
+padding: 14px 25px;
 text-decoration: none;
+font-size: 18px;
 font-weight: bold;
 border-radius: 6px;
 }
@@ -42,16 +46,20 @@ border-radius: 6px;
 background-color: #218838;
 }
 
-/* Body */
+/* Main Content */
 main {
 padding: 20px;
 max-width: 900px;
 margin: auto;
 }
 
-h1 {
-text-align: left;
+h1, h2 {
 color: #000;
+}
+
+p, ul {
+font-size: 18px;
+line-height: 1.6;
 }
 
 ul {
@@ -64,6 +72,7 @@ text-align: center;
 padding: 20px;
 font-size: 14px;
 color: #666;
+margin-top: 30px;
 }
 </style>
 
@@ -97,7 +106,7 @@ color: #666;
 },
 "telephone": "07735873694",
 "email": "martinsteel940@gmail.com",
-"url": "https://https://steely1968.github.io//"
+"url": "https://steely1968.github.io/"
 }
 </script>
 
@@ -106,31 +115,49 @@ color: #666;
 <body>
 
 <header>
-<!-- TOP LEFT LOGO -->
-<img src="logo.png" alt="Home Maintenance Services Logo">
+<!-- Larger Top-Left Logo -->
+<img src="logo.png" alt="Home Maintenance Services Logo - Askern Handyman">
 
-<!-- TOP RIGHT CALL BUTTON -->
+<!-- Top-Right Call Button -->
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </header>
 
 <main>
-<h1>Home Maintenance Services in Askern & Doncaster</h1>
+<h1>Reliable Home Maintenance Services in Askern & Doncaster</h1>
+
 <p>
-Professional, reliable and friendly home maintenance services based in Askern (DN6).
-Covering all general repair, upkeep and improvement work within a 5-mile radius.
+Welcome to your trusted local home maintenance service based in Askern, Doncaster (DN6).
+With a friendly, reliable and professional approach, I offer a wide range of small to medium repairs,
+general maintenance and improvement jobs around your home — all at affordable, honest prices.
 </p>
 
-<h2>Services Offered</h2>
+<p>
+Whether you need help with repairs, decorating, assembling, fixing or outdoor tasks, you’ll get
+quality workmanship and a service you can rely on. No job too small.
+</p>
+
+<h2>Services I Provide</h2>
+
 <ul>
-<li>General home repairs and maintenance</li>
-<li>Painting, decorating and plaster patching</li>
-<li>Joinery and small carpentry tasks</li>
-<li>Flat-pack assembly and household fixes</li>
-<li>Garden maintenance and exterior repairs</li>
+<li>General home repairs & maintenance</li>
+<li>Painting, decorating & plaster patching</li>
+<li>Joinery & small carpentry work</li>
+<li>Flat-pack assembly & household fixes</li>
+<li>Garden tidy-ups & exterior repairs</li>
+<li>Hanging shelves, mirrors, blinds, TV brackets</li>
+<li>Small plumbing jobs (taps, leaks, fittings)</li>
 </ul>
 
-<p><strong>Get in touch today for a free quote:</strong><br>
-<a href="mailto:martinsteel940@gmail.com">martinsteel940@gmail.com</a></p>
+<p>
+I cover Askern and surrounding areas within a <strong>5-mile radius</strong>.
+</p>
+
+<h2>Contact</h2>
+<p>
+📞 <strong>07735 873694</strong><br>
+📧 <a href="mailto:martinsteel940@gmail.com">martinsteel940@gmail.com</a><br>
+📍 35 Airstone Road, Askern, Doncaster DN6 0QA
+</p>
 </main>
 
 <footer>
