Refine service descriptions and add hyperlinks
Updated service descriptions and added links for better navigation.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home Maintenance Services | Askern DN6</title>
 
-<meta name="description" content="Reliable home maintenance and repair services based in Askern, Doncaster (DN6). Covering a 5-mile radius. Friendly, affordable and professional service.">
+<meta name="description" content="Reliable home maintenance and repair services in Askern, Doncaster (DN6). Covering a 5-mile radius. Friendly, affordable and professional handyman service.">
 
 <style>
 body {
@@ -59,8 +59,15 @@ font-size: 18px;
 line-height: 1.6;
 }
 
-ul {
-padding-left: 20px;
+ul li a {
+color: #000000;
+text-decoration: none;
+font-weight: bold;
+}
+
+ul li a:hover {
+text-decoration: underline;
+color: #28a745;
 }
 
 /* Contact Form */
@@ -147,7 +154,7 @@ margin-top: 30px;
 <body>
 
 <header>
-<img src="logo.png" alt="Home Maintenance Services Logo - Askern Handyman">
+<img src="logo.png" alt="Home Maintenance Services Logo">
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </header>
 
@@ -155,29 +162,26 @@ margin-top: 30px;
 <h1>Reliable Home Maintenance Services in Askern & Doncaster</h1>
 
 <p>
-Welcome to your trusted local home maintenance service based in Askern, Doncaster (DN6).
-Offering friendly, reliable and professional workmanship for all kinds of small to medium
-home repair and improvement tasks. No job too small.
+Welcome to your trusted local home maintenance and handyman service based in Askern, Doncaster (DN6).
+I offer friendly, reliable and professional workmanship for all small to medium home repair and
+improvement tasks — with fair pricing and no job too small.
 </p>
 
 <h2>Services I Provide</h2>
 
 <ul>
-<li>General home repairs & maintenance</li>
-<li>Painting, decorating & plaster patching</li>
-<li>Joinery & small carpentry work</li>
-<li>Flat-pack assembly & household fixes</li>
-<li>Garden tidy-ups & exterior repairs</li>
-<li>Hanging blinds, mirrors, shelves, TV brackets</li>
-<li>Small plumbing jobs (leaks, taps, fittings)</li>
+<li><a href="https://steely1968.github.io/services/general-home-repairs">General home repairs & maintenance</a></li>
+<li><a href="https://steely1968.github.io/services/painting-decorating">Painting, decorating & plaster patching</a></li>
+<li><a href="https://steely1968.github.io/services/joinery-carpentry">Joinery & small carpentry work</a></li>
+<li><a href="https://steely1968.github.io/services/flat-pack-assembly">Flat-pack assembly & household fixes</a></li>
+<li><a href="https://steely1968.github.io/services/garden-maintenance">Garden tidy-ups & exterior repairs</a></li>
+<li><a href="https://steely1968.github.io/services/hanging-installations">Hanging blinds, mirrors, shelves, TV brackets</a></li>
+<li><a href="https://steely1968.github.io/services/plumbing-small-jobs">Small plumbing jobs (leaks, taps, fittings)</a></li>
 </ul>
 
 <h2>Contact Me</h2>
 
-<!-- Secure Contact Form (email stays hidden) -->
 <form class="contact-form" action="https://formsubmit.co/martinsteel940@gmail.com" method="POST">
-
-<!-- Email Hidden from Users -->
 <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_template" value="table">
 
