Improve SEO and update service descriptions
Updated title and description meta tags for SEO. Enhanced service descriptions and added new services to the list.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home Maintenance & Handyman Services | Askern & Doncaster DN6</title>
+<title>Handyman & Home Maintenance Services | Askern & Doncaster DN6</title>
 
-<meta name="description" content="Reliable, affordable home maintenance and handyman services in Askern, Doncaster (DN6). Covering a 5-mile radius. Friendly professional help for repairs, painting, carpentry, plumbing, garden work and more.">
+<meta name="description" content="Local handyman and home maintenance services in Askern & Doncaster (DN6). Repairs, painting, external decorating, gutter clearing, carpentry, flat-pack assembly, garden work, rubbish removal and more. Affordable, reliable and friendly.">
 
 <!-- Styles -->
 <style>
@@ -109,7 +109,6 @@ cursor: pointer;
 background-color: #218838;
 }
 
-/* Footer */
 footer {
 text-align: center;
 padding: 20px;
@@ -118,13 +117,12 @@ color: #666;
 margin-top: 30px;
 }
 
-/* Honeypot (hidden field) */
 .hidden-field {
 display: none !important;
 }
 </style>
 
-<!-- LocalBusiness Schema -->
+<!-- Schema.org Local Business -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -164,11 +162,15 @@ display: none !important;
 "serviceType": [
 "General Home Repairs",
 "Painting & Decorating",
+"External House Painting",
 "Joinery",
 "Flat-Pack Assembly",
 "Garden Maintenance",
+"Gutter Clearing",
+"Gutter Repairs & Replacement",
 "Hanging & Installations",
-"Small Plumbing Jobs"
+"Small Plumbing Jobs",
+"Rubbish Removal"
 ]
 }
 </script>
@@ -183,12 +185,12 @@ display: none !important;
 </header>
 
 <main>
-<h1>Home Maintenance & Handyman Services in Askern & Doncaster (DN6)</h1>
+<h1>Handyman & Home Maintenance Services in Askern & Doncaster (DN6)</h1>
 
 <p>
-Welcome to your local trusted home maintenance and handyman service based in Askern, Doncaster.
-I provide reliable, friendly and affordable help for a wide range of home repairs, installations
-and improvements — with no job too small.
+I provide reliable, friendly and affordable handyman services throughout Askern and the wider Doncaster DN6 area.
+Whether you need repairs, improvements, installations or exterior home work, I offer a fast, professional service
+with no job too small.
 </p>
 
 <h2>Services I Provide</h2>
@@ -196,19 +198,23 @@ and improvements — with no job too small.
 <ul>
 <li><a href="https://steely1968.github.io/services/general-home-repairs">General home repairs & maintenance</a></li>
 <li><a href="https://steely1968.github.io/services/painting-decorating">Painting, decorating & plaster patching</a></li>
+<li><a href="https://steely1968.github.io/services/external-decorating">External house painting & exterior decorating</a></li>
 <li><a href="https://steely1968.github.io/services/joinery-carpentry">Joinery & small carpentry work</a></li>
 <li><a href="https://steely1968.github.io/services/flat-pack-assembly">Flat-pack assembly & household fixes</a></li>
+<li><a href="https://steely1968.github.io/services/gutter-clearing">Gutter clearing, cleaning & maintenance</a></li>
+<li><a href="https://steely1968.github.io/services/gutter-repair-replacement">Gutter repairs & replacement</a></li>
 <li><a href="https://steely1968.github.io/services/garden-maintenance">Garden tidy-ups & exterior repairs</a></li>
 <li><a href="https://steely1968.github.io/services/hanging-installations">Hanging blinds, mirrors, shelves, TV brackets</a></li>
 <li><a href="https://steely1968.github.io/services/plumbing-small-jobs">Small plumbing jobs (leaks, taps, fittings)</a></li>
+<li><a href="https://steely1968.github.io/services/rubbish-removal">Rubbish removal & small house clearances</a></li>
 </ul>
 
 <h2>Why Choose Me?</h2>
 <ul>
-<li>Local Askern handyman — quick response</li>
+<li>Local Askern handyman with fast response times</li>
 <li>No call-out fee</li>
 <li>Fair, honest pricing</li>
-<li>Friendly and reliable service</li>
+<li>Friendly and reliable, with attention to detail</li>
 <li>Most small jobs completed the same day</li>
 </ul>
 
@@ -219,7 +225,7 @@ and improvements — with no job too small.
 <input type="hidden" name="_template" value="table">
 <input type="hidden" name="_next" value="https://steely1968.github.io/thank-you.html">
 
-<!-- Honeypot field (spam protection) -->
+<!-- Honeypot anti-spam -->
 <input type="text" name="_honey" class="hidden-field">
 
 <label for="name">Your Name:</label>
