Revise meta description and service list layout
Updated the description meta tag for clarity and improved wording. Adjusted service list presentation and enhanced the introductory paragraph for better readability.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Handyman & Home Maintenance Services | Askern & Doncaster DN6</title>
 
-<meta name="description" content="Local handyman and home maintenance services in Askern & Doncaster (DN6). Repairs, painting, external decorating, gutter clearing, carpentry, flat-pack assembly, garden work, rubbish removal and more. Affordable, reliable and friendly.">
+<meta name="description" content="Local handyman and home maintenance services in Askern & Doncaster (DN6). Home repairs, painting, external decorating, gutter clearing, joinery, flat-pack assembly, garden work, rubbish removal and more. Reliable and affordable.">
 
 <!-- Styles -->
 <style>
@@ -57,19 +57,24 @@ color: #000;
 margin-top: 10px;
 }
 
-ul {
-padding-left: 20px;
-}
-
-ul li a {
-color: #000;
-text-decoration: none;
+/* Service Cards */
+.service-list a {
+display: block;
+background: #f8f8f8;
+padding: 14px 18px;
+margin: 12px 0;
+border-radius: 8px;
+border: 1px solid #ddd;
 font-weight: bold;
+text-decoration: none;
+color: #000;
+transition: 0.25s;
 }
 
-ul li a:hover {
-text-decoration: underline;
-color: #28a745;
+.service-list a:hover {
+background: #e8ffe8;
+border-color: #28a745;
+transform: translateX(4px);
 }
 
 /* Contact Form */
@@ -97,7 +102,7 @@ font-size: 16px;
 
 .contact-form button {
 background-color: #28a745;
-color: rgba(255, 255, 255, 0.98);
+color: #fff;
 padding: 14px 25px;
 border: none;
 border-radius: 6px;
@@ -114,7 +119,7 @@ text-align: center;
 padding: 20px;
 font-size: 14px;
 color: #666;
-margin-top: 30px;
+margin-top: 40px;
 }
 
 .hidden-field {
@@ -185,36 +190,37 @@ display: none !important;
 </header>
 
 <main>
+
 <h1>Handyman & Home Maintenance Services in Askern & Doncaster (DN6)</h1>
 
 <p>
-I provide reliable, friendly and affordable handyman services throughout Askern and the wider Doncaster DN6 area.
-Whether you need repairs, improvements, installations or exterior home work, I offer a fast, professional service
-with no job too small.
+I provide friendly, reliable and affordable handyman services across Askern and the surrounding
+Doncaster DN6 areas. From repairs and installations to outdoor maintenance and decorating,
+I offer professional workmanship with no job too small.
 </p>
 
 <h2>Services I Provide</h2>
 
-<ul>
-<li><a href="https://steely1968.github.io/services/general-home-repairs">General home repairs & maintenance</a></li>
-<li><a href="https://steely1968.github.io/services/painting-decorating">Painting, decorating & plaster patching</a></li>
-<li><a href="https://steely1968.github.io/services/external-decorating">External house painting & exterior decorating</a></li>
-<li><a href="https://steely1968.github.io/services/joinery-carpentry">Joinery & small carpentry work</a></li>
-<li><a href="https://steely1968.github.io/services/flat-pack-assembly">Flat-pack assembly & household fixes</a></li>
-<li><a href="https://steely1968.github.io/services/gutter-clearing">Gutter clearing, cleaning & maintenance</a></li>
-<li><a href="https://steely1968.github.io/services/gutter-repair-replacement">Gutter repairs & replacement</a></li>
-<li><a href="https://steely1968.github.io/services/garden-maintenance">Garden tidy-ups & exterior repairs</a></li>
-<li><a href="https://steely1968.github.io/services/hanging-installations">Hanging blinds, mirrors, shelves, TV brackets</a></li>
-<li><a href="https://steely1968.github.io/services/plumbing-small-jobs">Small plumbing jobs (leaks, taps, fittings)</a></li>
-<li><a href="https://steely1968.github.io/services/rubbish-removal">Rubbish removal & small house clearances</a></li>
-</ul>
+<div class="service-list">
+<a href="https://steely1968.github.io/services/general-home-repairs">General home repairs & maintenance</a>
+<a href="https://steely1968.github.io/services/painting-decorating">Painting, decorating & plaster patching</a>
+<a href="https://steely1968.github.io/services/external-decorating">External house painting & exterior decorating</a>
+<a href="https://steely1968.github.io/services/joinery-carpentry">Joinery & small carpentry work</a>
+<a href="https://steely1968.github.io/services/flat-pack-assembly">Flat-pack assembly & household fixes</a>
+<a href="https://steely1968.github.io/services/gutter-clearing">Gutter clearing, cleaning & maintenance</a>
+<a href="https://steely1968.github.io/services/gutter-repair-replacement">Gutter repairs & replacement</a>
+<a href="https://steely1968.github.io/services/garden-maintenance">Garden tidy-ups & exterior repairs</a>
+<a href="https://steely1968.github.io/services/hanging-installations">Hanging blinds, mirrors, shelves & TV brackets</a>
+<a href="https://steely1968.github.io/services/plumbing-small-jobs">Small plumbing jobs (leaks, taps, fittings)</a>
+<a href="https://steely1968.github.io/services/rubbish-removal">Rubbish removal & small house clearances</a>
+</div>
 
 <h2>Why Choose Me?</h2>
 <ul>
-<li>Local Askern handyman with fast response times</li>
+<li>Local Askern handyman with fast, friendly service</li>
 <li>No call-out fee</li>
-<li>Fair, honest pricing</li>
-<li>Friendly and reliable, with attention to detail</li>
+<li>Fair and honest pricing</li>
+<li>Reliable, tidy and professional</li>
 <li>Most small jobs completed the same day</li>
 </ul>
 
