--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Handyman & Home Maintenance Services | Askern & Doncaster DN6</title>
 
-<meta name="description" content="Local handyman and home maintenance services in Askern & Doncaster (DN6). Home repairs, painting, external decorating, gutter clearing, joinery, flat-pack assembly, garden work, rubbish removal and more. Reliable and affordable.">
+<meta name="description" content="Local handyman and home maintenance services in Askern & Doncaster (DN6). Repairs, decorating, gutter clearing, exterior painting, garden work, rubbish removal and more. Reliable and affordable local handyman.">
 
-<!-- Styles -->
 <style>
 body {
 margin: 0;
 font-family: Arial, sans-serif;
-background-color: #ffffff;
+background: #ffffff;
 color: #000;
 line-height: 1.6;
 }
 
+/* HEADER */
 header {
 display: flex;
 justify-content: space-between;
@@ -28,7 +28,22 @@ border-bottom: 2px solid #ddd;
 }
 
 header img {
-height: 100px;
+height: 90px;
+}
+
+.home-link {
+font-size: 18px;
+font-weight: bold;
+text-decoration: none;
+margin-right: 20px;
+color: #000;
+border: 2px solid #000;
+padding: 6px 14px;
+border-radius: 6px;
+}
+
+.home-link:hover {
+background: #e2e2e2;
 }
 
 .call-button {
@@ -39,13 +54,13 @@ text-decoration: none;
 font-size: 18px;
 font-weight: bold;
 border-radius: 6px;
-display: inline-block;
 }
 
 .call-button:hover {
 background-color: #218838;
 }
 
+/* MAIN LAYOUT */
 main {
 padding: 20px;
 max-width: 900px;
@@ -53,13 +68,13 @@ margin: auto;
 }
 
 h1, h2 {
-color: #000;
 margin-top: 10px;
 }
 
-/* Service Cards */
+/* SERVICE CARDS */
 .service-list a {
-display: block;
+display: flex;
+align-items: center;
 background: #f8f8f8;
 padding: 14px 18px;
 margin: 12px 0;
@@ -69,6 +84,13 @@ font-weight: bold;
 text-decoration: none;
 color: #000;
 transition: 0.25s;
+font-size: 17px;
+}
+
+.service-list a span.icon {
+font-size: 22px;
+width: 35px;
+display: inline-block;
 }
 
 .service-list a:hover {
@@ -77,7 +99,7 @@ border-color: #28a745;
 transform: translateX(4px);
 }
 
-/* Contact Form */
+/* CONTACT FORM */
 .contact-form {
 margin-top: 30px;
 padding: 20px;
@@ -116,10 +138,21 @@ background-color: #218838;
 
 footer {
 text-align: center;
-padding: 20px;
+padding: 25px;
 font-size: 14px;
 color: #666;
 margin-top: 40px;
+border-top: 1px solid #ddd;
+}
+
+footer a {
+color: #1877F2;
+font-weight: bold;
+text-decoration: none;
+}
+
+footer a:hover {
+text-decoration: underline;
 }
 
 .hidden-field {
@@ -127,7 +160,7 @@ display: none !important;
 }
 </style>
 
-<!-- Schema.org Local Business -->
+<!-- SCHEMA.ORG -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -163,20 +196,7 @@ display: none !important;
 "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
 "opens": "08:00",
 "closes": "18:00"
-}],
-"serviceType": [
-"General Home Repairs",
-"Painting & Decorating",
-"External House Painting",
-"Joinery",
-"Flat-Pack Assembly",
-"Garden Maintenance",
-"Gutter Clearing",
-"Gutter Repairs & Replacement",
-"Hanging & Installations",
-"Small Plumbing Jobs",
-"Rubbish Removal"
-]
+}]
 }
 </script>
 
@@ -186,6 +206,7 @@ display: none !important;
 
 <header>
 <img src="logo.png" alt="Home Maintenance Services Askern Logo">
+<a class="home-link" href="https://steely1968.github.io/">Home</a>
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </header>
 
@@ -194,33 +215,66 @@ display: none !important;
 <h1>Handyman & Home Maintenance Services in Askern & Doncaster (DN6)</h1>
 
 <p>
-I provide friendly, reliable and affordable handyman services across Askern and the surrounding
-Doncaster DN6 areas. From repairs and installations to outdoor maintenance and decorating,
-I offer professional workmanship with no job too small.
+I provide friendly, reliable and affordable handyman services across Askern and the wider Doncaster DN6 area.
+No job is too small — from repairs and maintenance to outdoor work and installations.
 </p>
 
 <h2>Services I Provide</h2>
 
 <div class="service-list">
-<a href="https://steely1968.github.io/services/general-home-repairs">General home repairs & maintenance</a>
-<a href="https://steely1968.github.io/services/painting-decorating">Painting, decorating & plaster patching</a>
-<a href="https://steely1968.github.io/services/external-decorating">External house painting & exterior decorating</a>
-<a href="https://steely1968.github.io/services/joinery-carpentry">Joinery & small carpentry work</a>
-<a href="https://steely1968.github.io/services/flat-pack-assembly">Flat-pack assembly & household fixes</a>
-<a href="https://steely1968.github.io/services/gutter-clearing">Gutter clearing, cleaning & maintenance</a>
-<a href="https://steely1968.github.io/services/gutter-repair-replacement">Gutter repairs & replacement</a>
-<a href="https://steely1968.github.io/services/garden-maintenance">Garden tidy-ups & exterior repairs</a>
-<a href="https://steely1968.github.io/services/hanging-installations">Hanging blinds, mirrors, shelves & TV brackets</a>
-<a href="https://steely1968.github.io/services/plumbing-small-jobs">Small plumbing jobs (leaks, taps, fittings)</a>
-<a href="https://steely1968.github.io/services/rubbish-removal">Rubbish removal & small house clearances</a>
+
+<a href="https://steely1968.github.io/services/general-home-repairs">
+<span class="icon">🔧</span> General home repairs & maintenance
+</a>
+
+<a href="https://steely1968.github.io/services/painting-decorating">
+<span class="icon">🎨</span> Painting, decorating & plaster patching
+</a>
+
+<a href="https://steely1968.github.io/services/external-decorating">
+<span class="icon">🏠</span> External house painting & exterior decorating
+</a>
+
+<a href="https://steely1968.github.io/services/joinery-carpentry">
+<span class="icon">🪚</span> Joinery & small carpentry work
+</a>
+
+<a href="https://steely1968.github.io/services/flat-pack-assembly">
+<span class="icon">📦</span> Flat-pack assembly & household fixes
+</a>
+
+<a href="https://steely1968.github.io/services/gutter-clearing">
+<span class="icon">🪜</span> Gutter clearing, cleaning & maintenance
+</a>
+
+<a href="https://steely1968.github.io/services/gutter-repair-replacement">
+<span class="icon">🔩</span> Gutter repairs & replacement
+</a>
+
+<a href="https://steely1968.github.io/services/garden-maintenance">
+<span class="icon">🌿</span> Garden tidy-ups & exterior repairs
+</a>
+
+<a href="https://steely1968.github.io/services/hanging-installations">
+<span class="icon">🖼️</span> Hanging blinds, mirrors, shelves & TV brackets
+</a>
+
+<a href="https://steely1968.github.io/services/plumbing-small-jobs">
+<span class="icon">🚰</span> Small plumbing jobs (leaks, taps, fittings)
+</a>
+
+<a href="https://steely1968.github.io/services/rubbish-removal">
+<span class="icon">🗑️</span> Rubbish removal & small house clearances
+</a>
+
 </div>
 
 <h2>Why Choose Me?</h2>
 <ul>
 <li>Local Askern handyman with fast, friendly service</li>
 <li>No call-out fee</li>
-<li>Fair and honest pricing</li>
-<li>Reliable, tidy and professional</li>
+<li>Fair, honest pricing</li>
+<li>Tidy and professional</li>
 <li>Most small jobs completed the same day</li>
 </ul>
 
@@ -231,7 +285,6 @@ I offer professional workmanship with no job too small.
 <input type="hidden" name="_template" value="table">
 <input type="hidden" name="_next" value="https://steely1968.github.io/thank-you.html">
 
-<!-- Honeypot anti-spam -->
 <input type="text" name="_honey" class="hidden-field">
 
 <label for="name">Your Name:</label>
@@ -250,6 +303,8 @@ I offer professional workmanship with no job too small.
 
 <footer>
 © 2025 Home Maintenance Services – Askern, Doncaster DN6
+<br><br>
+<a href="https://facebook.com" target="_blank">Find us on Facebook</a>
 </footer>
 
 </body>
