--- a/services/gutter-repair-replacement.html
+++ b/services/gutter-repair-replacement.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gutter Repairs & Replacement | Askern & Doncaster DN6</title>
 
-<meta name="description" content="Professional gutter repairs, replacement and leak fixes in Askern & Doncaster (DN6). Local handyman service for blocked gutters, damaged brackets, leaks and downpipe issues.">
+<title>Gutter Repairs & Replacement | Askern & Doncaster DN6 | Home Maintenance Services</title>
+
+<meta name="description" content="Local gutter repairs and replacement in Askern & Doncaster DN6. Fixing leaks, blockages, broken brackets and sagging gutters. Fast, reliable handyman services.">
+
+<!-- OpenGraph -->
+<meta property="og:title" content="Gutter Repairs & Replacement | Askern & Doncaster DN6">
+<meta property="og:description" content="Local gutter repair and replacement services in Askern & Doncaster DN6.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://steely1968.github.io/gutter-repairs">
+<meta property="og:image" content="https://steely1968.github.io/logo.png">
 
 <style>
 body {
 margin: 0;
 font-family: Arial, sans-serif;
 background: #ffffff;
-color: #000;
+color: #000000;
 line-height: 1.6;
 }
 
@@ -26,112 +33,136 @@ background-color: #f4f4f4;
 border-bottom: 2px solid #ddd;
 }
 
-header img { height: 90px; }
+header img {
+height: 80px;
+width: auto;
+}
 
-.home-link {
+nav a {
 font-size: 18px;
 font-weight: bold;
 text-decoration: none;
 margin-right: 20px;
 color: #000;
-border: 2px solid #000;
-padding: 6px 14px;
-border-radius: 6px;
 }
-
-.home-link:hover { background: #e2e2e2; }
 
 .call-button {
-background-color: #28a745;
-color: #ffffff;
-padding: 14px 25px;
+background-color: #1f8b34;
+padding: 12px 20px;
+border-radius: 6px;
+color: white;
 text-decoration: none;
 font-size: 18px;
-font-weight: bold;
-border-radius: 6px;
 }
 
-.call-button:hover { background-color: #218838; }
+.call-button:hover,
+.call-button:focus {
+background-color: #196a29;
+outline: 2px solid #000;
+}
 
 main {
-padding: 20px;
 max-width: 900px;
 margin: auto;
+padding: 20px;
 }
 
-.info-box {
+.box {
 background: #f8f8f8;
-padding: 18px;
+padding: 20px;
 border-radius: 8px;
 border: 1px solid #ddd;
 margin-bottom: 25px;
-}
-
-.info-box h2 { margin-top: 0; }
-
-.faq-item {
-background: #f4f4f4;
-padding: 15px;
-border-radius: 8px;
-border: 1px solid #ddd;
-margin-bottom: 20px;
-}
-
-.contact-form {
-margin-top: 30px;
-padding: 20px;
-background: #f4f4f4;
-border-radius: 10px;
-border: 1px solid #ddd;
 }
 
 .contact-form input,
 .contact-form textarea {
 width: 100%;
 padding: 12px;
-margin: 8px 0 20px 0;
-border: 1px solid #ccc;
+margin-top: 6px;
 border-radius: 6px;
+border: 1px solid #999;
 font-size: 16px;
 }
 
 .contact-form button {
-background-color: #28a745;
-color: white;
-padding: 14px 25px;
+background-color: #1f8b34;
+color: #fff;
 border: none;
-border-radius: 6px;
+padding: 14px 25px;
 font-size: 18px;
+border-radius: 6px;
 cursor: pointer;
 }
 
-.contact-form button:hover { background-color: #218838; }
+.contact-form button:hover,
+.contact-form button:focus {
+background-color: #196a29;
+outline: 2px solid #000;
+}
 
 footer {
-text-align: center;
 padding: 25px;
+text-align: center;
 font-size: 14px;
-color: #666;
-margin-top: 40px;
 border-top: 1px solid #ddd;
 }
 
 footer a {
-color: #1877F2;
-font-weight: bold;
-text-decoration: none;
+color: #0645ad;
+}
+
+/* Accessibility focus outline */
+a:focus-visible,
+button:focus-visible,
+input:focus-visible,
+textarea:focus-visible {
+outline: 3px solid #000;
 }
 </style>
 
-<!-- =============================================================== -->
-<!-- COMPLETE GOOGLE JSON-LD SCHEMA -->
-<!-- =============================================================== -->
+<!-- SCHEMA: LOCALBUSINESS + SERVICE -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
-"@graph": [
+"@type": "LocalBusiness",
+"name": "Home Maintenance Services",
+"image": "https://steely1968.github.io/logo.png",
+"telephone": "07735 873694",
+"url": "https://steely1968.github.io/",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "Askern",
+"addressLocality": "Doncaster",
+"postalCode": "DN6",
+"addressCountry": "UK"
+},
+"areaServed": "Askern, Doncaster DN6",
+"serviceType": "Gutter Repairs & Replacement"
+}
+</script>
 
+<!-- SCHEMA: SERVICE PAGE -->
+<script type="application/ld+json">
 {
+"@context": "https://schema.org",
+"@type": "Service",
+"name": "Gutter Repairs & Replacement",
+"provider": {
+"@type": "LocalBusiness",
+"name": "Home Maintenance Services"
+},
+"areaServed": {
+"@type": "Place",
+"name": "Askern & Doncaster DN6"
+}
+}
+</script>
+
+<!-- SCHEMA: BREADCRUMBS -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
 "@type": "BreadcrumbList",
 "itemListElement": [
 {
@@ -144,121 +175,16 @@ text-decoration: none;
 "@type": "ListItem",
 "position": 2,
 "name": "Gutter Repairs & Replacement",
-"item": "https://steely1968.github.io/gutter-repairs/"
-}
-]
-},
-
-{
-"@type": "Organization",
-"@id": "https://steely1968.github.io/#org",
-"name": "Home Maintenance Services",
-"url": "https://steely1968.github.io/",
-"logo": "https://steely1968.github.io/logo.png",
-"sameAs": [
-"https://www.facebook.com/",
-"https://github.com/steely1968"
-]
-},
-
-{
-"@type": "LocalBusiness",
-"@id": "https://steely1968.github.io/#business",
-"name": "Home Maintenance Services",
-"image": "https://steely1968.github.io/logo.png",
-"url": "https://steely1968.github.io/",
-"telephone": "+447735873694",
-"priceRange": "££",
-"description": "Local gutter repair, replacement and home maintenance service in Askern & Doncaster DN6.",
-
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6",
-"addressCountry": "UK"
-},
-
-"geo": {
-"@type": "GeoCoordinates",
-"latitude": 53.616,
-"longitude": -1.150
-},
-
-"openingHours": "Mo-Su 08:00-18:00",
-
-"areaServed": {
-"@type": "Place",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6",
-"addressCountry": "UK"
-}
-},
-
-"aggregateRating": {
-"@type": "AggregateRating",
-"ratingValue": "5",
-"ratingCount": "17"
-},
-
-"review": [
-{
-"@type": "Review",
-"author": "Sarah P.",
-"datePublished": "2024-09-10",
-"reviewBody": "Fixed a leaking gutter joint quickly and professionally. Great service!",
-"reviewRating": {
-"@type": "Rating",
-"ratingValue": "5"
-}
-},
-{
-"@type": "Review",
-"author": "James T.",
-"datePublished": "2024-08-22",
-"reviewBody": "Replaced my old UPVC guttering. Looks great and the price was fair.",
-"reviewRating": {
-"@type": "Rating",
-"ratingValue": "5"
-}
-}
-],
-
-"makesOffer": {
-"@type": "Offer",
-"itemOffered": {
-"@type": "Service",
-"name": "Gutter Repairs & Replacement",
-"serviceType": "Gutter Repairs",
-"areaServed": "Askern & Doncaster DN6"
-}
-},
-
-"hasOfferCatalog": {
-"@type": "OfferCatalog",
-"name": "Gutter Services",
-"itemListElement": [
-{
-"@type": "Offer",
-"itemOffered": { "@type": "Service", "name": "Gutter Repairs" }
-},
-{
-"@type": "Offer",
-"itemOffered": { "@type": "Service", "name": "Gutter Replacement" }
-},
-{
-"@type": "Offer",
-"itemOffered": { "@type": "Service", "name": "Gutter Cleaning" }
+"item": "https://steely1968.github.io/gutter-repairs"
 }
 ]
 }
-},
+</script>
 
+<!-- SCHEMA: FAQ -->
+<script type="application/ld+json">
 {
+"@context": "https://schema.org",
 "@type": "FAQPage",
 "mainEntity": [
 {
@@ -266,36 +192,25 @@ text-decoration: none;
 "name": "How much does gutter repair cost?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Most small repairs in the DN6 area are affordable and done the same day. Contact me for a free quote."
+"text": "Most small gutter repairs cost between £30 and £60 depending on the issue."
 }
 },
 {
 "@type": "Question",
-"name": "Do you repair all types of gutters?",
+"name": "Do you cover the entire Doncaster DN6 area?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, I repair UPVC, metal, and older style gutter systems."
+"text": "Yes, all of Askern and surrounding DN6 areas are covered."
 }
 },
 {
 "@type": "Question",
-"name": "Can you fix leaking gutter joints?",
+"name": "Can you repair leaking gutter joints?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": "Yes, leaking joints are a common problem and can usually be repaired quickly."
-}
-},
-{
-"@type": "Question",
-"name": "Do you offer gutter cleaning?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Yes, I also offer gutter clearing to remove moss, leaves and blockages."
+"text": "Yes, leaking joints are the most common repair and can usually be fixed same day."
 }
 }
-]
-}
-
 ]
 }
 </script>
@@ -304,92 +219,72 @@ text-decoration: none;
 
 <body>
 
-<header>
+<header role="banner">
 <img src="../logo.png" alt="Home Maintenance Services Logo">
-<a class="home-link" href="https://steely1968.github.io/">Home</a>
-<a href="tel:07735873694" class="call-button">Call 07735 873694</a>
+<nav role="navigation" aria-label="Main Navigation">
+<a href="https://steely1968.github.io/">Home</a>
+</nav>
+<a class="call-button" href="tel:07735873694" aria-label="Call Home Maintenance Services">Call 07735 873694</a>
 </header>
 
-<main>
+<main role="main">
 
-<h1>Gutter Repairs & Replacement in Askern & Doncaster (DN6)</h1>
+<h1>Gutter Repairs & Replacement in Askern & Doncaster DN6</h1>
 
-<p>Damaged, leaking or sagging gutters can quickly lead to damp, mould and costly home repairs. I provide fast, affordable gutter repairs and replacements throughout Askern and the Doncaster DN6 area.</p>
+<p>
+I provide fast, reliable and affordable gutter repairs and replacement throughout Askern and the wider Doncaster DN6 area.
+</p>
 
-<div class="info-box">
-<h2>🔧 Common Gutter Problems I Fix</h2>
+<div class="box">
+<h2>Common Gutter Problems I Fix</h2>
 <ul>
 <li>Leaking gutter joints</li>
 <li>Loose or broken brackets</li>
 <li>Sagging or overflowing gutters</li>
-<li>Cracked or damaged sections</li>
-<li>Downpipe blockages</li>
-<li>Water behind the gutter</li>
-<li>Gutters pulling away from the fascia</li>
+<li>Cracked or damaged UPVC gutters</li>
+<li>Blocked or misaligned downpipes</li>
+<li>Water running behind gutters</li>
+<li>Gutters pulling away from fascia boards</li>
 </ul>
 </div>
 
-<div class="info-box">
-<h2>🔩 Gutter Replacement</h2>
-<p>If a repair isn’t enough, I can replace full sections with durable modern UPVC guttering.</p>
-<ul>
-<li>Like-for-like replacements</li>
-<li>Choice of colours and styles</li>
-<li>Secure new brackets and fixings</li>
-</ul>
+<div class="box">
+<h2>Gutter Replacement Service</h2>
+<p>
+If repair isn’t enough, I can install new UPVC guttering matched to your home.
+</p>
 </div>
 
-<div class="info-box">
-<h2>🪜 Gutter Clearing & Cleaning</h2>
-<p>Blocked gutters cause leaks — I remove moss, leaves and debris to keep water flowing.</p>
-</div>
-
-<h2>Frequently Asked Questions</h2>
-
-<div class="faq-item">
-<h3>How much does gutter repair cost?</h3>
-<p>Most small repairs are affordable and completed the same day.</p>
-</div>
-
-<div class="faq-item">
-<h3>Do you repair all types of gutters?</h3>
-<p>Yes — UPVC, metal and older gutter systems.</p>
-</div>
-
-<div class="faq-item">
-<h3>Can you fix leaking joints?</h3>
-<p>Yes, leaking joints are a common repair and easy to fix.</p>
-</div>
-
-<div class="faq-item">
-<h3>Do you offer gutter cleaning?</h3>
-<p>Yes, I clear moss, leaves and blockages.</p>
+<div class="box">
+<h2>Gutter Cleaning</h2>
+<p>
+Blocked gutters cause leaks and damp—clearing available at the same visit.
+</p>
 </div>
 
 <h2>Get a Free Quote</h2>
 
-<form class="contact-form" action="https://formsubmit.co/martinsteel940@gmail.com" method="POST">
+<form class="contact-form" action="https://formsubmit.co/martinsteel940@gmail.com" method="POST" aria-label="Contact Form">
 <input type="hidden" name="_captcha" value="false">
 <input type="hidden" name="_template" value="table">
 
-<label>Your Name:</label>
-<input type="text" name="name" required>
+<label for="name">Your Name</label>
+<input id="name" name="name" required>
 
-<label>Phone Number:</label>
-<input type="text" name="phone" required>
+<label for="phone">Phone Number</label>
+<input id="phone" name="phone" required>
 
-<label>Your Message:</label>
-<textarea name="message" rows="6" required></textarea>
+<label for="message">Your Message</label>
+<textarea id="message" name="message" rows="6" required></textarea>
 
 <button type="submit">Send Message</button>
 </form>
 
 </main>
 
-<footer>
-© 2025 Home Maintenance Services – Askern, Doncaster DN6
-<br><br>
-<a href="https://facebook.com" target="_blank">Find us on Facebook</a>
+<footer role="contentinfo">
+© 2025 Home Maintenance Services – Askern, Doncaster DN6<br><br>
+<a href="https://facebook.com" target="_blank" aria-label="Visit our Facebook page">Find us on Facebook</a>
 </footer>
 
 </body>
